--- a/kifah/src/index.html
+++ b/kifah/src/index.html
@@ -5,7 +5,9 @@
   <title>Kifah - كفاح</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/png" href="assets/k.png">
+  <link rel="shortcut icon" type="image/png" href="assets/k.png">
+  <link rel="apple-touch-icon" type="image/png" href="assets/k.png">
   <link rel="preload" href="fonts/arabic.otf" as="font" type="font/otf" crossorigin="anonymous">
   <link rel="preload" href="fonts/alfont_com_TheYearofHandicrafts-Black.otf" as="font" type="font/otf" crossorigin="anonymous">
   <link rel="preconnect" href="https://fonts.googleapis.com">
